<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dataspeed_ulc</name>
  <version>2.1.2</version>
  <description>
    CAN interface to the Universal Lat/Lon Controller (ULC) firmware
  </description>

  <license>BSD</license>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dataspeed_ulc_can</exec_depend>
  <exec_depend>dataspeed_ulc_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
