<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dbw_ford_can</name>
  <version>2.1.2</version>
  <description>
    Drive-by-wire interface to the Dataspeed Inc. Ford DBW kit
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/DataspeedInc/dbw_ros/</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dataspeed_dbw_common</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>dbw_ford_msgs</depend>

  <build_depend>dataspeed_can_msg_filters</build_depend>

  <exec_depend>dataspeed_can_usb</exec_depend>
  <exec_depend>dbw_ford_description</exec_depend>
  <exec_depend>dataspeed_dbw_gateway</exec_depend>
  <exec_depend>dataspeed_ulc_can</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
